bug#17654  --read-from-remote-server causes core

fixing FD event issue that showed up on pb.


client/mysqlbinlog.cc:
  resetting temp_buf specially for FD event to avoid double-freeing